--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
             var password = document.getElementById("password").value;
             
             // Perform basic validation (you can enhance this)
-            if (username === "your_username" && password === "your_password") {
+            if (username === "admin" && password === "pa55w0rd") {
+                // Redirect to the email service page
+                window.location.href = "privatepages/emailservice.html";
+            }
+                 if (username === "weatherguy" && password === "guywithweather") {
                 // Redirect to the email service page
                 window.location.href = "privatepages/emailservice.html";
             } else {
