--- a/privatepages/emailservice.html
+++ b/privatepages/emailservice.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script>
         // Initialize EmailJS with your Service ID
-        emailjs.init('your_emailjs_user_id');
+        emailjs.init('service_tqhn6bk');
         
         // Function to send email
         function sendEmail() {
@@ -17,7 +17,7 @@
             
             // Use your EmailJS Template ID here
             var templateParams = {
-                to_email: userEmail,
+                to_email: evan.degroot.network@outlook.com,
                 message_html: message
             };
 
